master_yaml/jenkins-svc.yaml
#apiVersion: extensions/v1beta1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-leader
  namespace: ns-jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-leader
  template:
    metadata:
      labels:
        app: jenkins-leader
    spec:
      serviceAccountName: jenkins
      securityContext: # Jenkins uid:gid=1000:1000
        fsGroup: 1000
      containers:
        - name: jenkins-leader
          image: jenkins/jenkins:alpine
          volumeMounts:
          - name: jenkins-home
            mountPath: /var/jenkins_home
          ports:
          - containerPort: 8080
          - containerPort: 50000
      volumes:
        - name: jenkins-home
          #persistentVolumeClaim:
            #claimName: jenkins-leader-pvc
          hostPath:
            path: /home/admin/k8s/jenkins/jenkins-home/
            type: Directory
      nodeSelector:
        kubernetes.io/hostname: k8s-master

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-leader-svc
  namespace: ns-jenkins
  labels:
    app: jenkins-leader
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
    nodePort: 30000
  - port: 50000
    protocol: TCP
    name: slave
    nodePort: 30001
  selector:
    app: jenkins-leader
